src/App.css
html {
      box-sizing: border-box;
    }

    *, *::before, *::after {
      box-sizing: inherit;
      padding: 0;
      margin: 0;
    }

    .app {
      width: 960px;
      margin: 0 auto;
      padding: 20px;
    }

    nav ul {
      list-style: none;
      display: flex;
      background-color: black;
      margin-bottom: 20px;
    }

    nav ul li {
      padding: 20px;
    }

    nav ul li a {
      color: white;
      text-decoration: none;
    }

    .current {
      border-bottom: 4px solid white;
    }

    h1 {
      margin-bottom: 20px;
    }

    p {
      margin-bottom: 15px;
    }


    .whitelink, .whitelink:hover, .whitelink:active, .whitelink:visited {
        color: #FFFFFF;
        text-decoration: none;
    }

    a, a:active, a:visited {
        color: #42aaf5;
        text-decoration: none;
    }

    a:hover {
        color: #42aaf5;
        text-decoration: underline;
    }

    .clickable_link, .clickable_link:active, .clickable_link:visited {
        color: #42aaf5;
        text-decoration: none;
    }

    .clickable_link:hover {
        color: #42aaf5;
        text-decoration: underline;
    }

    .footerlink, .footerlink:active, .footerlink:visited {
        color: #42aaf5;
        text-decoration: none;
    }

    .footerlink:hover {
        color: #1a82cd;
        text-decoration: nonw;
    }




#------------------------------------------------------

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #000000;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


main > .container {
  padding: 60px 15px 0;
}


#------------------------------------------------------
# SEND IN BLUE STYLES
#------------------------------------------------------

@font-face {
  font-display: block;
  font-family: Roboto;
  src: url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
}

@font-face {
  font-display: fallback;
  font-family: Roboto;
  font-weight: 600;
  src: url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
}

@font-face {
  font-display: fallback;
  font-family: Roboto;
  font-weight: 700;
  src: url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff) format("woff")
}

#sib-container input:-ms-input-placeholder {
  text-align: left;
  font-family: "Helvetica", sans-serif;
  color: #c0ccda;
  border-width: px;
}

#sib-container input::placeholder {
  text-align: left;
  font-family: "Helvetica", sans-serif;
  color: #c0ccda;
  border-width: px;
}

